---
source: src/linter.rs
expression: output.finish().to_string()
---
  #: E712
| if res == True:
|> Comparison to `True` should be `cond is True`
      pass
  #: E712
| if res != False:
|> Comparison to `False` should be `cond is not False`
      pass
  #: E712
| if True != res:
|> Comparison to `True` should be `cond is not True`
      pass
  #: E712
| if False == res:
|> Comparison to `False` should be `cond is False`
      pass
  #: E712
| if res[1] == True:
|> Comparison to `True` should be `cond is True`
      pass
  #: E712
| if res[1] != False:
|> Comparison to `False` should be `cond is not False`
      pass
  #: E712
| var = 1 if cond == True else -1 if cond == False else cond
|> Comparison to `True` should be `cond is True`
|> Comparison to `False` should be `cond is False`
  #: E712
| if (True) == TrueElement or x == TrueElement:
|> Comparison to `True` should be `cond is True`
      pass
  
  #: Okay
  if x not in y:
      pass
  
  if not (X in Y or X is Z):
      pass
  
  if not (X in Y):
      pass
  
  if x is not y:
      pass
  
  if X is not Y is not Z:
      pass
  
  if TrueElement.get_element(True) == TrueElement.get_element(False):
      pass
  
  assert (not foo) in bar
  assert {"x": not foo} in bar
  assert [42, not foo] in bar

